end of page1 needed to improve last scroll  title and button

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
+
   <body>
     <main class="home">
       <!-- header -->
@@ -88,116 +89,114 @@
       </section>
 
       <!-- Apple Products -->
-      <section>
-        <div class="a-products">
-          <!-- ipadair -->
-          <div class="a-product a-product--ipadair">
-            <div class="a-product__title"></div>
-            <div class="a-product__subtitle">
-              Two sizes. Faster chip. Does it all.
-            </div>
-            <div class="a-product__buttons">
-              <button class="btn btn--major">Learn more</button>
-              <button class="btn btn--minor">Buy</button>
-            </div>
-            <div class="a-product__aisub">Hello, Apple Intelligence.</div>
+      <section class="a-products">
+        <!-- ipadair -->
+        <div class="a-product a-product--ipadair">
+          <div class="a-product__title"></div>
+          <div class="a-product__subtitle">
+            Two sizes. Faster chip. Does it all.
           </div>
-
-          <!-- AirPods Pro 2 -->
-          <div class="a-product a-product--airpodspro2">
-            <div class="a-product__title">AirPods Pro 2</div>
-            <div class="a-product__subtitle">
-              Now with a Hearing Aid feature.2
-            </div>
-            <div class="a-product__buttons">
-              <button class="btn btn--major">Learn more</button>
-              <button class="btn btn--minor">Buy</button>
-            </div>
+          <div class="a-product__buttons">
+            <button class="btn btn--major">Learn more</button>
+            <button class="btn btn--minor">Buy</button>
           </div>
+          <div class="a-product__aisub">Hello, Apple Intelligence.</div>
+        </div>
 
-          <!-- AirPods 4 -->
-          <div class="a-product a-product--airpods4">
-            <div class="a-product__title">AirPods 4</div>
-            <div class="a-product__subtitle">
-              Iconic. Now supersonic.<br />
-              Available with Active Noise<br />
-              Cancellation.2
-            </div>
-            <div class="a-product__buttons">
-              <button class="btn btn--major">Learn more</button>
-              <button class="btn btn--minor">Buy</button>
-            </div>
+        <!-- AirPods Pro 2 -->
+        <div class="a-product a-product--airpodspro2">
+          <div class="a-product__title">AirPods Pro 2</div>
+          <div class="a-product__subtitle">
+            Now with a Hearing Aid feature.2
           </div>
-
-          <!-- WATCH -->
-          <div class="a-product a-product--watch">
-            <div class="a-product__title">WATCH</div>
-            <div class="a-product__midtitle">SERIES 10</div>
-            <div class="a-product__subtitle">Thinstant classic.</div>
-            <div class="a-product__buttons">
-              <button class="btn btn--major">Learn more</button>
-              <button class="btn btn--minor">Buy</button>
-            </div>
+          <div class="a-product__buttons">
+            <button class="btn btn--major">Learn more</button>
+            <button class="btn btn--minor">Buy</button>
           </div>
+        </div>
 
-          <!-- MacBook Air -->
-          <div class="a-product a-product--macbookair">
-            <div class="a-product__title">MacBook Air</div>
-            <div class="a-product__subtitle">Lean. Mean. M3 machine.</div>
-            <div class="a-product__buttons">
-              <button class="btn btn--major">Learn more</button>
-              <button class="btn btn--minor">Buy</button>
-            </div>
+        <!-- AirPods 4 -->
+        <div class="a-product a-product--airpods4">
+          <div class="a-product__title">AirPods 4</div>
+          <div class="a-product__subtitle">
+            Iconic. Now supersonic.<br />
+            Available with Active Noise<br />
+            Cancellation.2
           </div>
-
-          <!-- Small Business -->
-          <div class="a-product a-product--smallbusiness">
-            <div class="a-product__title">Apple for Small Business</div>
-            <div class="a-product__subtitle">
-              Hardware, software, and<br />
-              expert help - all in one place.
-            </div>
-            <div class="a-product__buttons">
-              <button class="btn btn--major">Learn more</button>
-            </div>
+          <div class="a-product__buttons">
+            <button class="btn btn--major">Learn more</button>
+            <button class="btn btn--minor">Buy</button>
           </div>
+        </div>
 
-          <!-- Carrier deals -->
-          <div class="a-product a-product--carrierdeals">
-            <div class="a-product__title">Carrier deals at Apple</div>
-            <div class="a-product__subtitle">
-              Get up to $1000 in credit on<br />
-              a new iPhone. Trade-in may<br />
-              be required.
-            </div>
-            <div class="a-product__buttons">
-              <button class="btn btn--major">Find your deal</button>
-            </div>
+        <!-- WATCH -->
+        <div class="a-product a-product--watch">
+          <div class="a-product__title">WATCH</div>
+          <div class="a-product__midtitle">SERIES 10</div>
+          <div class="a-product__subtitle">Thinstant classic.</div>
+          <div class="a-product__buttons">
+            <button class="btn btn--major">Learn more</button>
+            <button class="btn btn--minor">Buy</button>
           </div>
+        </div>
 
-          <!-- Trade In -->
-          <div class="a-product a-product--tradein">
-            <div class="a-product__title">Trade In</div>
-            <div class="a-product__subtitle">
-              Get $180–$650 in credit when you<br />
-              trade in iPhone 12 or higher.3
-            </div>
-            <div class="a-product__buttons">
-              <button class="btn btn--major">Get your estimate</button>
-            </div>
+        <!-- MacBook Air -->
+        <div class="a-product a-product--macbookair">
+          <div class="a-product__title">MacBook Air</div>
+          <div class="a-product__subtitle">Lean. Mean. M3 machine.</div>
+          <div class="a-product__buttons">
+            <button class="btn btn--major">Learn more</button>
+            <button class="btn btn--minor">Buy</button>
           </div>
+        </div>
 
-          <!-- Card -->
-          <div class="a-product a-product--card">
-            <div class="a-product__title">Card</div>
-            <div class="a-product__subtitle">
-              Get up to 3% Daily Cash back<br />
-              with every purchase.
-            </div>
-            <div class="a-product__buttons">
-              <button class="btn btn--major">Learn more</button>
-              <button class="btn btn--minor">Apply now</button>
-            </div>
+        <!-- Small Business -->
+        <div class="a-product a-product--smallbusiness">
+          <div class="a-product__title">Apple for Small Business</div>
+          <div class="a-product__subtitle">
+            Hardware, software, and<br />
+            expert help - all in one place.
+          </div>
+          <div class="a-product__buttons">
+            <button class="btn btn--major">Learn more</button>
+          </div>
+        </div>
+
+        <!-- Carrier deals -->
+        <div class="a-product a-product--carrierdeals">
+          <div class="a-product__title">Carrier deals at Apple</div>
+          <div class="a-product__subtitle">
+            Get up to $1000 in credit on<br />
+            a new iPhone. Trade-in may<br />
+            be required.
+          </div>
+          <div class="a-product__buttons">
+            <button class="btn btn--major">Find your deal</button>
+          </div>
+        </div>
+
+        <!-- Trade In -->
+        <div class="a-product a-product--tradein">
+          <div class="a-product__title">Trade In</div>
+          <div class="a-product__subtitle">
+            Get $180–$650 in credit when you<br />
+            trade in iPhone 12 or higher.3
+          </div>
+          <div class="a-product__buttons">
+            <button class="btn btn--major">Get your estimate</button>
+          </div>
+        </div>
+
+        <!-- Card -->
+        <div class="a-product a-product--card">
+          <div class="a-product__title">Card</div>
+          <div class="a-product__subtitle">
+            Get up to 3% Daily Cash back<br />
+            with every purchase.
+          </div>
+          <div class="a-product__buttons">
+            <button class="btn btn--major">Learn more</button>
+            <button class="btn btn--minor">Apply now</button>
           </div>
         </div>
       </section>
@@ -205,6 +204,7 @@
       <!-- a-tv scroll -->
       <section>
         <div class="atv-scroller">
+          <!-- amov1=atv1 -->
           <div class="atv-slide amov1">
             <img src="images/amov1.jpg" class="atv-slide__img" />
             <img src="images/amov1.mob.png" class="atv-slide__img-mob" />
@@ -214,6 +214,7 @@
             </div>
           </div>
 
+          <!-- amov2=atv2 -->
           <div class="atv-slide amov2">
             <img src="images/amov2.png" class="atv-slide__img" />
             <div class="atv-slide__text">
@@ -224,6 +225,7 @@
             </div>
           </div>
 
+          <!-- amov3=atv3 -->
           <div class="atv-slide amov3">
             <img src="images/amov3.jpg" class="atv-slide__img" />
             <img src="images/amov3.mob.png" class="atv-slide__img-mob" />
@@ -233,6 +235,7 @@
             </div>
           </div>
 
+          <!-- amov4=atv4 -->
           <div class="atv-slide amov4">
             <img src="images/amov4.png" class="atv-slide__img" />
             <img src="images/amov4.mob.png" class="atv-slide__img-mob" />
@@ -245,6 +248,7 @@
             </div>
           </div>
 
+          <!-- amov5=atv5 -->
           <div class="atv-slide amov5">
             <img src="images/amov5.jpg" class="atv-slide__img" />
             <div class="atv-slide__text">
@@ -253,6 +257,7 @@
             </div>
           </div>
 
+          <!-- amov6=atv6 -->
           <div class="atv-slide amov6">
             <img src="images/amov6.mob.png" class="atv-slide__img-mob" />
             <div class="atv-slide__text">
@@ -261,6 +266,7 @@
             </div>
           </div>
 
+          <!-- amov7=atv7 -->
           <div class="atv-slide amov7">
             <img src="images/amov7.mob.png" class="atv-slide__img-mob" />
             <div class="atv-slide__text">
@@ -269,6 +275,7 @@
             </div>
           </div>
 
+          <!-- amov8=atv8 -->
           <div class="atv-slide amov8">
             <img src="images/amov8.mob.png" class="atv-slide__img-mob" />
             <div class="atv-slide__text">
@@ -277,6 +284,7 @@
             </div>
           </div>
 
+          <!-- amov9=atv9 -->
           <div class="atv-slide amov9">
             <img src="images/amov9.mob.png" class="atv-slide__img-mob" />
             <div class="atv-slide__text">
@@ -285,6 +293,7 @@
             </div>
           </div>
 
+          <!-- amov10=atv10 -->
           <div class="atv-slide amov10">
             <img src="images/amov10.mob.png" class="atv-slide__img-mob" />
             <div class="atv-slide__text">
@@ -314,22 +323,25 @@
         <div class="acontent-slides">
           <div class="acontent-slide acont1">
             <img src="images/acont1.png" class="acontent-slide__img" />
-            <div class="acontent-slide__title"></div>
+            <div class="acontent-slide__title">
+              Improve Your Posture wicth<br />
+              Pilates
+            </div>
           </div>
 
           <div class="acontent-slide acont2">
             <img src="images/acont2.png" class="acontent-slide__img" />
-            <div class="acontent-slide__title"></div>
+            <div class="acontent-slide__title">R&B Now</div>
           </div>
 
           <div class="acontent-slide acont3">
             <img src="images/acont3.png" class="acontent-slide__img" />
-            <div class="acontent-slide__title"></div>
+            <div class="acontent-slide__title">NBA 2K25 Arcade Edition</div>
           </div>
 
           <div class="acontent-slide acont4">
             <img src="images/acont4.png" class="acontent-slide__img" />
-            <div class="acontent-slide__title"></div>
+            <div class="acontent-slide__title">Strength with Kim</div>
           </div>
 
           <div class="acontent-slide acont5">
@@ -339,62 +351,16 @@
 
           <div class="acontent-slide acont6">
             <img src="images/acont6.mob.png" class="acontent-slide__img" />
-            <div class="acontent-slide__title"></div>
+            <div class="acontent-slide__title">La Oficial</div>
           </div>
 
           <div class="acontent-slide acont7">
             <img src="images/acont7.mob.jpg" class="acontent-slide__img" />
-            <div class="acontent-slide__title"></div>
+            <div class="acontent-slide__title">Travel-Friendly Workouts</div>
           </div>
         </div>
+        <button class="acontent-button"></button>
       </section>
-
-      <!-- dlkflfhdfhl -->
-      <!-- dlkflfhdfhl -->
-      <!-- apple content scroll -->
-      <section class="content-scroller">
-        <div class="content-slides-container">
-          <div class="content-slides">
-            <div class="content-slide">
-              <img src="images/cont1.png" class="content-slide__img amov1" />
-              <div class="content-slide__title">
-                Improve Your Posture wicth<br />
-                Pilates
-              </div>
-            </div>
-            <div class="content-slide">
-              <img src="images/cont2.png" class="content-slide__img" />
-              <div class="content-slide__title content-slide__title--randb">
-                R&B Now
-              </div>
-            </div>
-            <div class="content-slide">
-              <img src="images/cont3.png" class="content-slide__img" />
-              <div class="content-slide__title">NBA 2K25 Arcade Edition</div>
-            </div>
-            <div class="content-slide">
-              <img src="images/cont4.png" class="content-slide__img" />
-              <div class="content-slide__title">Strength with Kim</div>
-            </div>
-            <div class="content-slide">
-              <img src="images/cont5.jpg" class="content-slide__img" />
-              <div class="content-slide__title"></div>
-            </div>
-            <div class="content-slide">
-              <img src="images/cont6.pho.png" class="content-slide__img" />
-              <div class="content-slide__title">La Oficial</div>
-            </div>
-            <div class="content-slide">
-              <img src="images/cont7.pho.jpg" class="content-slide__img" />
-              <div class="content-slide__title">Travel-Friendly Workouts</div>
-            </div>
-          </div>
-        </div>
-        <div class="content-button-box">
-          <button class="content-button"></button>
-        </div>
-      </section>
-      <section></section>
     </main>
   </body>
 </html>
