first page desk pad mob ended
need to add hover other effects

--- a/index.html
+++ b/index.html
@@ -318,44 +318,52 @@
       </section>
 
       <!-- a-content scroll -->
-      <section class="acontent-scroller">
-        <div class="acontent-slides">
-          <div class="acontent-slide acont1">
-            <img src="images/acont1.png" class="acontent-slide__img" />
-            <div class="acontent-slide__title">
-              Improve Your Posture wicth<br />
-              Pilates
+      <section>
+        <div class="acontent-scroller">
+          <div class="acontent-slides">
+            <!-- acont1 -->
+            <div class="acontent-slide acont1">
+              <img src="images/acont1.png" class="acontent-slide__img" />
+              <div class="acontent-slide__title">
+                Improve Your Posture wicth Pilates
+              </div>
             </div>
-          </div>
 
-          <div class="acontent-slide acont2">
-            <img src="images/acont2.png" class="acontent-slide__img" />
-            <div class="acontent-slide__title">R&B Now</div>
-          </div>
+            <!-- acont2 -->
+            <div class="acontent-slide acont2">
+              <img src="images/acont2.png" class="acontent-slide__img" />
+              <div class="acontent-slide__title">R&B Now</div>
+            </div>
 
-          <div class="acontent-slide acont3">
-            <img src="images/acont3.png" class="acontent-slide__img" />
-            <div class="acontent-slide__title">NBA 2K25 Arcade Edition</div>
-          </div>
+            <!-- acont3 -->
+            <div class="acontent-slide acont3">
+              <img src="images/acont3.png" class="acontent-slide__img" />
+              <div class="acontent-slide__title">NBA 2K25 Arcade Edition</div>
+            </div>
 
-          <div class="acontent-slide acont4">
-            <img src="images/acont4.png" class="acontent-slide__img" />
-            <div class="acontent-slide__title">Strength with Kim</div>
-          </div>
+            <!-- acont4 -->
+            <div class="acontent-slide acont4">
+              <img src="images/acont4.png" class="acontent-slide__img" />
+              <div class="acontent-slide__title">Strength with Kim</div>
+            </div>
 
-          <div class="acontent-slide acont5">
-            <img src="images/acont5.jpg" class="acontent-slide__img" />
-            <div class="acontent-slide__title"></div>
-          </div>
+            <!-- acont5 -->
+            <div class="acontent-slide acont5">
+              <img src="images/acont5.jpg" class="acontent-slide__img" />
+              <div class="acontent-slide__title"></div>
+            </div>
 
-          <div class="acontent-slide acont6">
-            <img src="images/acont6.mob.png" class="acontent-slide__img" />
-            <div class="acontent-slide__title">La Oficial</div>
-          </div>
+            <!-- acont6 -->
+            <div class="acontent-slide acont6">
+              <img src="images/acont6.mob.png" class="acontent-slide__img" />
+              <div class="acontent-slide__title">La Oficial</div>
+            </div>
 
-          <div class="acontent-slide acont7">
-            <img src="images/acont7.mob.jpg" class="acontent-slide__img" />
-            <div class="acontent-slide__title">Travel-Friendly Workouts</div>
+            <!-- acont7 -->
+            <div class="acontent-slide acont7">
+              <img src="images/acont7.mob.jpg" class="acontent-slide__img" />
+              <div class="acontent-slide__title">Travel-Friendly Workouts</div>
+            </div>
           </div>
         </div>
         <button class="acontent-button"></button>
