--- a/store.html
+++ b/store.html
@@ -54,59 +54,167 @@
         </div>
       </section>
 
+      <!-- blurred background -->
+      <section class="blurred-background"></section>
+
+      <!-- Store -->
+      <section class="store-container">
+        <div class="store__heading">
+          <span class="store-heading-span">Store.</span> Gift magic
+          this holiday.
+        </div>
+        <div>
+          <div class="store-question qbox1">
+            <img
+              src="images-store/head-Q-icon.svg"
+              class="store-question__img"
+            />
+            <div class="store-question__text">
+              <div class="title">Need shopping help?</div>
+              <a href="-" class="content">Ask a Specialist</a>
+            </div>
+          </div>
+
+          <div class="store-question qbox2">
+            <img
+              src="images-store/head-Q-icon.svg"
+              class="store-question__img"
+            />
+            <div class="store-question__text">
+              <div class="title">Visit an Apple Store</div>
+              <a href="-" class="content">Find one near you</a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- product categories -->
+      <section>
+        <div class="product-categories-scroller">
+          <!-- Mac -->
+          <div class="product-category">
+            <img src="images-store/cat-mac.svg" class="category__img" />
+            <div class="category__title">Mac</div>
+          </div>
+
+          <!-- iPhone -->
+          <div class="product-category">
+            <img src="images-store/cat-iphone.svg" class="category__img" />
+            <div class="category__title">iPhone</div>
+          </div>
+
+          <!-- iPad -->
+          <div class="product-category">
+            <img src="images-store/cat-ipad.svg" class="category__img" />
+            <div class="category__title">iPad</div>
+          </div>
+
+          <!-- Apple Watch -->
+          <div class="product-category">
+            <img src="images-store/cat-watch.png" class="category__img" />
+            <div class="category__title">Apple Watch</div>
+          </div>
+
+          <!-- Apple Vision Pro -->
+          <div class="product-category">
+            <img src="images-store/cat-visionpro.svg" class="category__img" />
+            <div class="category__title">Apple Vision Pro</div>
+          </div>
+
+          <!-- Airpods -->
+          <div class="product-category">
+            <img src="images-store/cat-airpods.svg" class="category__img" />
+            <div class="category__title">Airpods</div>
+          </div>
+
+          <!-- AirTag -->
+          <div class="product-category">
+            <img src="images-store/cat-airtag.svg" class="category__img" />
+            <div class="category__title">AirTag</div>
+          </div>
+
+          <!-- Apple TV 4K -->
+          <div class="product-category">
+            <img src="images-store/cat-appletv4k.svg" class="category__img" />
+            <div class="category__title">Apple TV 4K</div>
+          </div>
+
+          <!-- Homepod -->
+          <div class="product-category">
+            <img src="images-store/cat-homepod.svg" class="category__img" />
+            <div class="category__title">Homepod</div>
+          </div>
+
+          <!-- Accessories -->
+          <div class="product-category">
+            <img src="images-store/cat-accessories.svg" class="category__img" />
+            <div class="category__title">Accessories</div>
+          </div>
+
+          <!-- Apple Gift Card -->
+          <div class="product-category">
+            <img src="images-store/cat-giftcard.svg" class="category__img" />
+            <div class="category__title">Apple Gift Card</div>
+          </div>
+        </div>
+      </section>
+
       <!-- The latest -->
-      <section class="latest">
-        <div class="latest-heads">The latest.Let them unwrap wonders.</div>
-        <div class="latest-cards">
+      <section class="latest-container">
+        <div class="container-heading">
+          <span>The latest.</span>Let them unwrap wonders.
+        </div>
+        <div class="latest-cards-scroller">
           <!-- iPhone 16 Pro -->
           <div class="latest-card">
-            <!-- <img
+            <img
               src="images-store/latest-iphone-pro.png"
               class="latest-card__img"
-            /> -->
-            <div class="latest-card-text">
-              <div class="latest-card__addinfo"></div>
-              <div class="latest-card__name"></div>
-              <div class="latest-card__price"></div>
+            />
+            <div class="latest-card__text">
+              <div class="latest-card__addinfo">APPLE INTELLIGENCE</div>
+              <div class="latest-card__name">iPhone 16 Pro</div>
+              <div class="latest-card__price">
+                From $999 or $41.62/mo. for 24 mo.*
+              </div>
             </div>
           </div>
 
           <!-- Apple Watch Series 10 -->
           <div class="latest-card">
-            <!-- <img
+            <img
               src="images-store/latest-watch-series.png"
               class="latest-card__img"
-            /> -->
+            />
             <div class="latest-card__text">
-              <div class="card-addinfo"></div>
-              <div class="card-name"></div>
-              <div class="card-price"></div>
+              <div class="card-name">Apple Watch Series 10</div>
+              <div class="card-price">From $399 or $33.25/mo. for 12 mo.</div>
             </div>
           </div>
 
           <!-- iPad mini -->
           <div class="latest-card">
-            <!-- <img
+            <img
               src="images-store/latest-ipad-mini.png"
               class="latest-card__img"
-            /> -->
+            />
             <div class="latest-card__text">
-              <div class="card-addinfo"></div>
-              <div class="card-name"></div>
-              <div class="card-price"></div>
+              <div class="card-addinfo">APPLE INTELLIGENCE</div>
+              <div class="card-name">iPad mini</div>
+              <div class="card-price">From $499 or $41.58/mo. for 12 mo.</div>
             </div>
           </div>
 
           <!-- MacBook Pro -->
           <div class="latest-card">
-            <!-- <img
+            <img
               src="images-store/latest-macbook-pro.jpg"
               class="latest-card__img"
-            /> -->
+            />
             <div class="latest-card__text">
-              <div class="card-addinfo"></div>
-              <div class="card-name"></div>
-              <div class="card-price"></div>
+              <div class="card-addinfo">APPLE INTELLIGENCE</div>
+              <div class="card-name">MacBook Pro</div>
+              <div class="card-price">From $1599 or $133.25/mo. for 12 mo.</div>
             </div>
           </div>
 
