start from holiday picks

--- a/store.html
+++ b/store.html
@@ -162,8 +162,9 @@
       <!-- The latest -->
       <section class="latest-container">
         <div class="container-heading">
-          <span>The latest.</span>Let them unwrap wonders.
+          <span>The latest.</span> Let them unwrap wonders.
         </div>
+
         <div class="latest-cards-scroller">
           <!-- iPhone 16 Pro -->
           <div class="latest-card">
@@ -172,23 +173,28 @@
               class="latest-card__img"
             />
             <div class="latest-card__text">
-              <div class="latest-card__addinfo">APPLE INTELLIGENCE</div>
-              <div class="latest-card__name">iPhone 16 Pro</div>
-              <div class="latest-card__price">
+              <div class="l-card-t__addinfo">
+                APPLE INTELLIGENCE
+                <sup>∆</sup>
+              </div>
+              <div class="l-card-t__name">iPhone 16 Pro</div>
+              <div class="l-card-t__price">
                 From $999 or $41.62/mo. for 24 mo.*
               </div>
             </div>
           </div>
 
           <!-- Apple Watch Series 10 -->
-          <div class="latest-card">
+          <div class="latest-card watch-series10">
             <img
               src="images-store/latest-watch-series.png"
               class="latest-card__img"
             />
             <div class="latest-card__text">
-              <div class="card-name">Apple Watch Series 10</div>
-              <div class="card-price">From $399 or $33.25/mo. for 12 mo.</div>
+              <div class="l-card-t__name">Apple Watch Series 10</div>
+              <div class="l-card-t__price">
+                From $399 or $33.25/mo. for 12 mo.
+              </div>
             </div>
           </div>
 
@@ -199,9 +205,14 @@
               class="latest-card__img"
             />
             <div class="latest-card__text">
-              <div class="card-addinfo">APPLE INTELLIGENCE</div>
-              <div class="card-name">iPad mini</div>
-              <div class="card-price">From $499 or $41.58/mo. for 12 mo.</div>
+              <div class="l-card-t__addinfo">
+                APPLE INTELLIGENCE
+                <sup>∆</sup>
+              </div>
+              <div class="l-card-t__name">iPad mini</div>
+              <div class="l-card-t__price">
+                From $499 or $41.58/mo. for 12 mo.
+              </div>
             </div>
           </div>
 
@@ -212,38 +223,246 @@
               class="latest-card__img"
             />
             <div class="latest-card__text">
-              <div class="card-addinfo">APPLE INTELLIGENCE</div>
-              <div class="card-name">MacBook Pro</div>
-              <div class="card-price">From $1599 or $133.25/mo. for 12 mo.</div>
+              <div class="l-card-t__addinfo">
+                APPLE INTELLIGENCE
+                <sup>∆</sup>
+              </div>
+              <div class="l-card-t__name">MacBook Pro</div>
+              <div class="l-card-t__price">
+                From $1599 or $133.25/mo. for 12 mo.
+              </div>
             </div>
           </div>
 
           <div class="latest-card">
-            <!-- <img class="latest-card__img" /> -->
             <div class="latest-card__text">
-              <div class="card-addinfo"></div>
-              <div class="card-name"></div>
-              <div class="card-price"></div>
+              <div class="l-card-t__addinfo"></div>
+              <div class="l-card-t__name"></div>
+              <div class="l-card-t__price"></div>
             </div>
           </div>
 
           <div class="latest-card">
-            <!-- <img class="latest-card__img" /> -->
             <div class="latest-card__text">
-              <div class="card-addinfo"></div>
-              <div class="card-name"></div>
-              <div class="card-price"></div>
+              <div class="l-card-t__addinfo"></div>
+              <div class="l-card-t__name"></div>
+              <div class="l-card-t__price"></div>
             </div>
           </div>
 
           <div class="latest-card">
-            <!-- <img class="latest-card__img" /> -->
             <div class="latest-card__text">
-              <div class="card-addinfo"></div>
-              <div class="card-name"></div>
-              <div class="card-price"></div>
+              <div class="l-card-t__addinfo"></div>
+              <div class="l-card-t__name"></div>
+              <div class="l-card-t__price"></div>
             </div>
           </div>
+        </div>
+      </section>
+
+      <!-- Personalization -->
+      <section class="personalization-container">
+        <div class="container-heading">
+          <span>Personalization.</span> Let them unwrap wonders.
+        </div>
+
+        <div class="personalization-cards-scroller">
+          <!-- Make their gift -->
+          <div class="personalization-card1st">
+            <img
+              src="images-store/persona-gift.png"
+              class="personalization-card1st__img"
+            />
+            <div class="personalization-card1st__slogan">
+              Make their gift<br />
+              one of a kind.
+            </div>
+          </div>
+
+          <!-- AirPods Max - Purple -->
+          <div class="personalization-card">
+            <img
+              src="images-store/persona-airpods-max.png"
+              class="personalization-card__img"
+            />
+            <div class="personalization-card__colorbox">
+              <img
+                src="images-store/persona-airpods-max-1blue.svg"
+                class="color"
+              />
+              <img
+                src="images-store/persona-airpods-max-2purple.svg"
+                class="color"
+              />
+              <img
+                src="images-store/persona-airpods-max-3midnight.svg"
+                class="color"
+              />
+              <img
+                src="images-store/persona-airpods-max-4starlight.svg"
+                class="color"
+              />
+              <img
+                src="images-store/persona-airpods-max-5orange.svg"
+                class="color"
+              />
+            </div>
+            <div class="personalization-card__text">
+              <div class="p-card-t__addinfo">Free Engraving</div>
+              <div class="p-card-t__name">AirPods Max - Purple</div>
+              <div class="p-card-t__price">$549.00</div>
+            </div>
+          </div>
+
+          <!-- AirPods Pro 2 -->
+          <div class="personalization-card airpods-pro2">
+            <img
+              src="images-store/persona-airpods-pro-2.png"
+              class="personalization-card__img"
+            />
+            <div class="personalization-card__text">
+              <div class="p-card-t__addinfo">Free Engraving</div>
+              <div class="p-card-t__name">AirPods Pro 2</div>
+              <div class="p-card-t__price">$249.00</div>
+            </div>
+          </div>
+
+          <!-- AirPods 4 -->
+          <div class="personalization-card airpods-4">
+            <img
+              src="images-store/persona-airpods-4.png"
+              class="personalization-card__img"
+            />
+            <div class="personalization-card__text">
+              <div class="p-card-t__addinfo">Free Engraving</div>
+              <div class="p-card-t__name">
+                AirPods 4 with Active Noise Cancellation
+              </div>
+              <div class="p-card-t__price">$179.00</div>
+            </div>
+          </div>
+
+          <!-- Apple Pencil Pro -->
+          <div class="personalization-card pencil-pro">
+            <img
+              src="images-store/persona-pencil-pro.png"
+              class="personalization-card__img"
+            />
+            <div class="personalization-card__text">
+              <div class="p-card-t__addinfo">New</div>
+              <div class="p-card-t__name">Apple Pencil Pro</div>
+              <div class="p-card-t__price">$49.00</div>
+            </div>
+          </div>
+
+          <div class="personalization-card">
+            <img class="personalization-card__img" />
+            <div class="personalization-card__text">
+              <div class="p-card-t__addinfo"></div>
+              <div class="p-card-t__name"></div>
+              <div class="p-card-t__price"></div>
+            </div>
+          </div>
+
+          <div class="personalization-card">
+            <img class="personalization-card__img" />
+            <div class="personalization-card__text">
+              <div class="p-card-t__addinfo"></div>
+              <div class="p-card-t__name"></div>
+              <div class="p-card-t__price"></div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Holiday Picks -->
+      <section class="holiday-container">
+        <div class="container-heading">
+          <span>Holiday Picks.</span> Add more magic to the moment.
+        </div>
+
+        <div class="holiday-cards-scroller">
+          <!-- Surprise your favorites -->
+          <div class="holiday-card1st">
+            <img class="holiday-card1st__img" />
+            <div class="holiday-card1st__slogan">
+              Surprise your favorites with these favorites.
+            </div>
+          </div>
+
+          <!-- iPhone 16 Silicone Case  -->
+          <div class="holiday-card">
+            <img class="holiday-card__img" />
+            <div class="holiday-card__colorbox">
+              <div class="color"></div>
+              <div class="color"></div>
+              <div class="color"></div>
+              <div class="color"></div>
+              <div class="color"></div>
+              <div class="color"></div>
+            </div>
+            <div class="holiday-card__text">
+              <div class="h-card-t__addinfo">New</div>
+              <div class="h-card-t__name">
+                iPhone 16 Silicone Case with MagSafe - Star Fruit
+              </div>
+              <div class="h-card-t__price">$49.00</div>
+            </div>
+          </div>
+
+          <!-- HomePod mini -->
+          <div class="holiday-card">
+            <img class="holiday-card__img" />
+            <div class="holiday-card__colorbox">
+              <div class="color"></div>
+              <div class="color"></div>
+              <div class="color"></div>
+              <div class="color"></div>
+              <div class="color"></div>
+            </div>
+            <div class="holiday-card__text">
+              <div class="h-card-t__name">HomePod mini - White</div>
+              <div class="h-card-t__price">$99.00</div>
+            </div>
+          </div>
+
+          <!-- Smart Folio for iPad -->
+          <div class="holiday-card">
+            <img class="holiday-card__img" />
+            <div class="holiday-card__colorbox">
+              <div class="color"></div>
+              <div class="color"></div>
+              <div class="color"></div>
+              <div class="color"></div>
+            </div>
+            <div class="holiday-card__text">
+              <div class="h-card-t__name">
+                Smart Folio for iPad Air 11 - inch (M2) - Sage
+              </div>
+              <div class="h-card-t__price">$79.00</div>
+            </div>
+          </div>
+
+          <!-- Beats Solo Wireless Headphones -->
+          <div class="holiday-card">
+            <img class="holiday-card__img" />
+            <div class="holiday-card__colorbox">
+              <div class="color"></div>
+              <div class="color"></div>
+              <div class="color"></div>
+            </div>
+            <div class="holiday-card__text">
+              <div class="h-card-t__addinfo">New</div>
+              <div class="h-card-t__name">
+                Beats Solo 4 - On-Ear Wireless Headphones - Slate Blue
+              </div>
+              <div class="h-card-t__price">$79.00</div>
+            </div>
+          </div>
+
+          <div class="holiday-card"></div>
+
+          <div class="holiday-card"></div>
         </div>
       </section>
     </main>
